--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
         </div>
         <!-- carousel-->
         <div class="container  mx-auto ">
-            <div class="flex justify-center mt-10 ">
-                <div class="carousel m-2 lg:m-0 w-full md:w-3/4 lg:w-full h-[200px] md:h-[350px] lg:h-[450px] relative  bg-gradient-to-r from-cyan-500 to-blue-500">
+            <div class="flex justify-center mt-4 ">
+                <div class="carousel m-2 lg:m-0 w-full md:w-3/4 lg:w-full h-[200px] md:h-[350px] lg:h-[450px] relative  bg-gradient-to-r from-[#121212] to-[#121212 ] rounded-xl">
 
-                    <div id="slide1" class="carousel-item relative w-full mix-blend-overla ">
+                    <div id="slide1" class="carousel-item relative w-full mix-blend-overlay">
                         <img src="images/banner1.png" class="w-full">
 
                         <div class="absolute left-20 top-6 md:left-12  lg:left-60 ">
@@ -130,7 +130,7 @@
                             <a href="#slide2" class="btn btn-circle  bg-black border-none text-white">❯</a>
                         </div>
                     </div>
-                    <div id="slide2" class="carousel-item relative w-full  mix-blend-overla">
+                    <div id="slide2" class="carousel-item relative w-full  mix-blend-overlay">
                         <img src="images/banner2.png" class="w-full" alt="">
                         <div class="absolute space-y-3 lg:space-y-5   left-1/4 top-4">
                             <h1 class=" text-xs lg:text-7xl text-white font-bold text-center">
@@ -148,7 +148,7 @@
                             <a href="#slide3" class="btn btn-circle bg-black border-none text-white ">❯</a>
                         </div>
                     </div>
-                    <div id="slide3" class="carousel-item relative w-full mix-blend-overla">
+                    <div id="slide3" class="carousel-item relative w-full mix-blend-overlay">
                         <img src="images/banner3.png" class="w-full" alt="">
                         <div class="absolute space-y-3 lg:space-y-5   left-1/4 top-4">
                             <h1 class=" text-xs lg:text-7xl text-white font-bold text-center">
@@ -166,7 +166,7 @@
                             <a href="#slide4" class="btn btn-circle bg-black border-none text-white">❯</a>
                         </div>
                     </div>
-                    <div id="slide4" class="carousel-item relative w-full mix-blend-overla">
+                    <div id="slide4" class="carousel-item relative w-full mix-blend-overlay">
                         <img src="images/banner4.png" class="w-full" alt="">
                         <div class="absolute space-y-3 lg:space-y-5   left-1/4 top-4">
                             <h1 class=" text-xs lg:text-7xl text-white font-bold text-center">
