--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
         <!-- carousel-->
         <div class="container  mx-auto ">
             <div class="flex justify-center mt-4 ">
-                <div class="carousel m-2 lg:m-0 w-full md:w-3/4 lg:w-full h-[200px] md:h-[350px] lg:h-[450px] relative  bg-gradient-to-r from-[#121212] to-[#121212 ] rounded-xl">
+                <div class="carousel m-2 lg:m-0 w-full md:w-3/4 lg:w-full h-[200px] md:h-[350px] lg:h-[450px] relative  bg-gradient-to-r from-[#121212bb] to-[#0000009b] rounded-xl">
 
                     <div id="slide1" class="carousel-item relative w-full mix-blend-overlay">
                         <img src="images/banner1.png" class="w-full">
 
-                        <div class="absolute left-20 top-6 md:left-12  lg:left-60 ">
+                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 ">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
@@ -132,56 +132,65 @@
                     </div>
                     <div id="slide2" class="carousel-item relative w-full  mix-blend-overlay">
                         <img src="images/banner2.png" class="w-full" alt="">
-                        <div class="absolute space-y-3 lg:space-y-5   left-1/4 top-4">
-                            <h1 class=" text-xs lg:text-7xl text-white font-bold text-center">
+                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 ">
+
+                            <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
                             </h1>
-                            <p class=" text-white text-center">We supply highly quality organic products</p>
+                            <p class=" text-white text-center text-sm">We supply highly quality organic products</p>
                             <div class="flex justify-center">
                                 <button class="btn bg-background-color border-none text-white cursor-pointer">Shop Now</button>
                             </div>
 
+
+
                         </div>
 
-                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                            <a href="#slide1" class="btn btn-circle bg-black border-none text-white  ">❮</a>
-                            <a href="#slide3" class="btn btn-circle bg-black border-none text-white ">❯</a>
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2 ">
+                            <a href="#slide1 " class="btn btn-circle bg-black border-none text-white ">❮</a>
+                            <a href="#slide3 " class="btn btn-circle bg-black border-none text-white ">❯</a>
                         </div>
                     </div>
-                    <div id="slide3" class="carousel-item relative w-full mix-blend-overlay">
-                        <img src="images/banner3.png" class="w-full" alt="">
-                        <div class="absolute space-y-3 lg:space-y-5   left-1/4 top-4">
-                            <h1 class=" text-xs lg:text-7xl text-white font-bold text-center">
+                    <div id="slide3 " class="carousel-item relative w-full mix-blend-overlay ">
+                        <img src="images/banner3.png " class="w-full " alt=" ">
+                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 ">
+
+                            <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
                             </h1>
-                            <p class=" text-white text-center">We supply highly quality organic products</p>
+                            <p class=" text-white text-center text-sm">We supply highly quality organic products</p>
                             <div class="flex justify-center">
                                 <button class="btn bg-background-color border-none text-white cursor-pointer">Shop Now</button>
                             </div>
 
+
+
                         </div>
 
-                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                            <a href="#slide2" class="btn btn-circle bg-black border-none text-white">❮</a>
-                            <a href="#slide4" class="btn btn-circle bg-black border-none text-white">❯</a>
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2 ">
+                            <a href="#slide2 " class="btn btn-circle bg-black border-none text-white ">❮</a>
+                            <a href="#slide4 " class="btn btn-circle bg-black border-none text-white ">❯</a>
                         </div>
                     </div>
-                    <div id="slide4" class="carousel-item relative w-full mix-blend-overlay">
-                        <img src="images/banner4.png" class="w-full" alt="">
-                        <div class="absolute space-y-3 lg:space-y-5   left-1/4 top-4">
-                            <h1 class=" text-xs lg:text-7xl text-white font-bold text-center">
+                    <div id="slide4 " class="carousel-item relative w-full mix-blend-overlay ">
+                        <img src="images/banner4.png " class="w-full " alt=" ">
+                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 ">
+
+                            <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
                             </h1>
-                            <p class=" text-white text-center">We supply highly quality organic products</p>
+                            <p class=" text-white text-center text-sm">We supply highly quality organic products</p>
                             <div class="flex justify-center">
                                 <button class="btn bg-background-color border-none text-white cursor-pointer">Shop Now</button>
                             </div>
 
+
+
                         </div>
 
-                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                            <a href="#slide3" class="btn btn-circle bg-black border-none text-white ">❮</a>
-                            <a href="#slide1" class="btn btn-circle bg-black border-none text-white">❯</a>
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2 ">
+                            <a href="#slide3 " class="btn btn-circle bg-black border-none text-white ">❮</a>
+                            <a href="#slide1 " class="btn btn-circle bg-black border-none text-white ">❯</a>
                         </div>
                     </div>
                 </div>
