--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
                     <div id="slide1" class="carousel-item relative w-full mix-blend-overlay">
                         <img src="images/banner1.png" class="w-full">
 
-                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 ">
+                        <div class="absolute left-20 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 ">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
                             </h1>
-                            <p class=" text-white text-center text-sm">We supply highly quality organic products</p>
+                            <p class=" text-white text-center text-sm md:text-xl lg:text-4xl">We supply highly quality organic products</p>
                             <div class="flex justify-center">
                                 <button class="btn bg-background-color border-none text-white cursor-pointer">Shop Now</button>
                             </div>
@@ -132,12 +132,12 @@
                     </div>
                     <div id="slide2" class="carousel-item relative w-full  mix-blend-overlay">
                         <img src="images/banner2.png" class="w-full" alt="">
-                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 ">
+                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
                             </h1>
-                            <p class=" text-white text-center text-sm">We supply highly quality organic products</p>
+                            <p class=" text-white text-center text-sm md:text-xl lg:text-4xl ">We supply highly quality organic products</p>
                             <div class="flex justify-center">
                                 <button class="btn bg-background-color border-none text-white cursor-pointer">Shop Now</button>
                             </div>
@@ -151,14 +151,20 @@
                             <a href="#slide3 " class="btn btn-circle bg-black border-none text-white ">❯</a>
                         </div>
                     </div>
-                    <div id="slide3 " class="carousel-item relative w-full mix-blend-overlay ">
-                        <img src="images/banner3.png " class="w-full " alt=" ">
-                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 ">
+
+
+
+
+
+
+                    <div id="slide3" class="carousel-item relative w-full  mix-blend-overlay">
+                        <img src="images/banner3.png" class="w-full" alt="">
+                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
                             </h1>
-                            <p class=" text-white text-center text-sm">We supply highly quality organic products</p>
+                            <p class=" text-white text-center text-sm md:text-xl lg:text-4xl ">We supply highly quality organic products</p>
                             <div class="flex justify-center">
                                 <button class="btn bg-background-color border-none text-white cursor-pointer">Shop Now</button>
                             </div>
@@ -172,14 +178,15 @@
                             <a href="#slide4 " class="btn btn-circle bg-black border-none text-white ">❯</a>
                         </div>
                     </div>
-                    <div id="slide4 " class="carousel-item relative w-full mix-blend-overlay ">
-                        <img src="images/banner4.png " class="w-full " alt=" ">
-                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 ">
+
+                    <div id="slide4" class="carousel-item relative w-full  mix-blend-overlay">
+                        <img src="images/banner4.png" class="w-full" alt="">
+                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
                             </h1>
-                            <p class=" text-white text-center text-sm">We supply highly quality organic products</p>
+                            <p class=" text-white text-center text-sm md:text-xl lg:text-4xl  ">We supply highly quality organic products</p>
                             <div class="flex justify-center">
                                 <button class="btn bg-background-color border-none text-white cursor-pointer">Shop Now</button>
                             </div>
@@ -193,6 +200,8 @@
                             <a href="#slide1 " class="btn btn-circle bg-black border-none text-white ">❯</a>
                         </div>
                     </div>
+
+
                 </div>
 
             </div>
