--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <style>
         .navlink li a {
             padding: 0px 10px;
+            color: white;
+            font-weight: bold;
         }
     </style>
 
@@ -44,7 +46,7 @@
         <!-- navbar -->
         <div class="container mx-auto ">
 
-            <div class="navbar mt-5 bg-white md:bg-background-color lg:bg-background-color flex flex-row-reverse   lg:flex-row justify-between md:justify-evenly  lg:justify-around
+            <div class="navbar mt-5 bg-white md:bg-background-color lg:bg-background-color flex flex-row-reverse   lg:flex-row justify-between md:justify-between  lg:justify-around
              lg:rounded-full py-3   ">
                 <div>
                     <div class=" dropdown dropdown-end ">
@@ -86,7 +88,7 @@
                 </div>
                 <div>
                     <img src="images/logo.png " alt=" " class="w-12 ">
-                    <h1>Fruist Brust</h1>
+                    <h1 class="text-black md:text-white text-2xl font-semibold  ml-3">Fruist Brust</h1>
                 </div>
                 <div class="form-control  hidden lg:block ">
                     <div class="relative">
