--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             padding: 0px 10px;
             color: white;
             font-weight: bold;
+            cursor: pointer;
         }
     </style>
 
@@ -46,7 +47,7 @@
         <!-- navbar -->
         <div class="container mx-auto ">
 
-            <div class="navbar mt-5 bg-white md:bg-background-color lg:bg-background-color flex flex-row-reverse   lg:flex-row justify-between md:justify-between  lg:justify-around
+            <div class="navbar mt-0 bg-white md:bg-background-color lg:bg-background-color flex flex-row-reverse   lg:flex-row justify-between md:justify-between  lg:justify-around
              lg:rounded-full py-3   ">
                 <div>
                     <div class=" dropdown dropdown-end ">
@@ -72,13 +73,13 @@
                             <a>Home</a>
                         </li>
                         <li>
-                            <a>Home</a>
+                            <a>About Us </a>
                         </li>
                         <li>
-                            <a>Home</a>
+                            <a>Shop</a>
                         </li>
                         <li>
-                            <a>Home</a>
+                            <a>All Fruits</a>
                         </li>
 
 
@@ -95,7 +96,7 @@
                         <input type="text " placeholder="Search " class="  w-80 p-2 outline-none  rounded-full " />
 
                         <div class="absolute right-10 top-2">
-                            <i class="fa-solid fa-magnifying-glass text-xl "></i>
+                            <i class="fa-solid fa-magnifying-glass text-xl cursor-pointer "></i>
                         </div>
                     </div>
                 </div>
@@ -134,7 +135,7 @@
                     </div>
                     <div id="slide2" class="carousel-item relative w-full  mix-blend-overlay">
                         <img src="images/banner2.png" class="w-full" alt="">
-                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
+                        <div class="absolute left-20 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
@@ -161,7 +162,7 @@
 
                     <div id="slide3" class="carousel-item relative w-full  mix-blend-overlay">
                         <img src="images/banner3.png" class="w-full" alt="">
-                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
+                        <div class="absolute left-20 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
@@ -183,7 +184,7 @@
 
                     <div id="slide4" class="carousel-item relative w-full  mix-blend-overlay">
                         <img src="images/banner4.png" class="w-full" alt="">
-                        <div class="absolute left-16 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
+                        <div class="absolute left-20 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
