--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fruit-Shop-Website</title>
+    <title>Fruit-Brust-Website</title>
     <!-- tailwind and daisyui  link-->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- fontawesome link -->
     <script src="https://kit.fontawesome.com/0b6dbca798.js" crossorigin="anonymous"></script>
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <!-- cutstom image and color -->
+
+
+
     <script>
         tailwind.config = {
             theme: {
@@ -34,11 +41,20 @@
 
     <!--  headers-section-->
     <style>
+        * {
+            font-family: 'Lato', sans-serif;
+        }
+        
         .navlink li a {
             padding: 0px 10px;
             color: white;
             font-weight: bold;
             cursor: pointer;
+        }
+        
+        .card {
+            border: 1px solid rgba(18, 18, 18, 0.10);
+            ;
         }
     </style>
 
@@ -105,12 +121,12 @@
 
         </div>
         <!-- carousel-->
-        <div class="container  mx-auto ">
-            <div class="flex justify-center mt-4 ">
-                <div class="carousel m-2 lg:m-0 w-full md:w-3/4 lg:w-full h-[200px] md:h-[350px] lg:h-[450px] relative  bg-gradient-to-r from-[#121212bb] to-[#0000009b] rounded-xl">
+        <div class="container  mx-auto mt-4 ">
+            <div class="flex  justify-center">
+                <div class="carousel m-2 lg:m-0 w-full md:w-3/4 lg:w-full h-[200px] md:h-[350px] lg:h-[450px] relative  bg-gradient-to-r from-[#121212bb] to-[#0000009b] rounded-lg">
 
                     <div id="slide1" class="carousel-item relative w-full mix-blend-overlay">
-                        <img src="images/banner1.png" class="w-full">
+                        <img src="images/banner1.png" class="w-full ">
 
                         <div class="absolute left-20 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 ">
 
@@ -134,7 +150,7 @@
                         </div>
                     </div>
                     <div id="slide2" class="carousel-item relative w-full  mix-blend-overlay">
-                        <img src="images/banner2.png" class="w-full" alt="">
+                        <img src="images/banner2.png" class="w-full  " alt="">
                         <div class="absolute left-20 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
@@ -161,7 +177,7 @@
 
 
                     <div id="slide3" class="carousel-item relative w-full  mix-blend-overlay">
-                        <img src="images/banner3.png" class="w-full" alt="">
+                        <img src="images/banner3.png" class="w-full  " alt="">
                         <div class="absolute left-20 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
@@ -183,7 +199,7 @@
                     </div>
 
                     <div id="slide4" class="carousel-item relative w-full  mix-blend-overlay">
-                        <img src="images/banner4.png" class="w-full" alt="">
+                        <img src="images/banner4.png" class="w-full  " alt="">
                         <div class="absolute left-20 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
@@ -210,9 +226,185 @@
             </div>
         </div>
 
+
+
     </header>
+    <main>
+
+        <!-- deal of the day section -->
+        <div class="container mx-auto mt-8">
+
+            <div class=" flex flex-col  lg:flex-row items-center justify-center  md:justify-center lg:justify-between space-y-5 ">
+                <div class="">
+                    <h1 class="text-center lg:text-left text-4xl font-bold ">Deal of the day</h1>
+                    <p class=" w-80 md:w-96 lg:w-2/3 text-center lg:text-left">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                </div>
 
 
+                <div class="flex  justify-center gap-2 ">
+                    <div>
+                        <h1 class="font-bold text-2xl">29</h1>
+                        <p>Days</p>
+                    </div>
+                    <span class="font-bold">:</span>
+
+                    <div>
+                        <h1 class="font-bold text-2xl">29</h1>
+                        <p>Days</p>
+                    </div><span class="font-bold">:</span>
+                    <div>
+                        <h1 class="font-bold text-2xl">29</h1>
+                        <p>Days</p>
+                    </div><span class="font-bold">:</span>
+                    <div>
+                        <h1 class="font-bold text-2xl">29</h1>
+                        <p>Days</p>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+            <div class="grid   grid-cols-1  md:grid-cols-2 lg:grid-cols-4 gap-5 mx-14 md:mx-8 lg:mx-0 mt-6">
+                <div class="card  bg-base-100 shadow-xl rounded-lg">
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
+
+                    </figure>
+                    <hr class="w-60 mt-7 mx-auto ">
+                    <div class="card-body items-center text-center space-y-4">
+                        <h1>Apple</h1>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+
+                        <!-- Open the modal using ID.showModal() method -->
+                        <button class="btn" onclick="my_modal_5.showModal()">Deatails</button>
+                        <dialog id="my_modal_5" class="modal modal-middle sm:modal-middle">
+                            <form method="dialog" class="modal-box w-80">
+                                <h3 class="font-bold text-lg ">Hello!</h3>
+                                <p class="py-4 ">Press ESC key or click the button below to close</p>
+                                <div class="modal-action ">
+                                    <!-- if there is a button in form, it will close the modal -->
+                                    <button class="btn ">Close</button>
+                                </div>
+                            </form>
+                        </dialog>
+
+                    </div>
+                </div>
+                <div class="card  bg-base-100 shadow-xl rounded-lg">
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit7.png" alt="Shoes" class="rounded-xl " />
+
+                    </figure>
+                    <hr class="w-60 mt-7 mx-auto ">
+                    <div class="card-body items-center text-center space-y-4">
+                        <h1>Orange</h1>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+
+
+                        <!-- Open the modal using ID.showModal() method -->
+                        <button class="btn" onclick="my_modal_6.showModal()">Deatails</button>
+                        <dialog id="my_modal_6" class="modal modal-middle sm:modal-middle">
+                            <form method="dialog" class="modal-box w-80">
+                                <h3 class="font-bold text-lg ">Hello!</h3>
+                                <p class="py-4 ">Press ESC key or click the button below to close</p>
+                                <div class="modal-action ">
+                                    <!-- if there is a button in form, it will close the modal -->
+                                    <button class="btn ">Close</button>
+                                </div>
+                            </form>
+                        </dialog>
+
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-xl rounded-lg">
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit8.png" alt="Shoes" class="rounded-xl " />
+
+                    </figure>
+                    <hr class="w-60 mt-7 mx-auto ">
+                    <div class="card-body items-center text-center space-y-4">
+                        <h1>Red Dragon</h1>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <!-- Open the modal using ID.showModal() method -->
+                        <button class="btn" onclick="my_modal_7.showModal()">Deatails</button>
+                        <dialog id="my_modal_7" class=" modal modal-middle sm:modal-middle">
+                            <form method="dialog" class="modal-box w-80">
+                                <figure class="">
+                                    <img src=" images/fruit8.png " alt="Shoes " class="rounded-xl " />
+                                </figure>
+                                <div class="card-body items-center text-center ">
+                                    <h2 class="card-title ">Shoes!</h2>
+                                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                                    <div class="card-actions ">
+                                        <button class="btn btn-primary ">Buy Now</button>
+                                        <button class="btn btn-primary ">Buy Now</button>
+                                    </div>
+                                </div>
+
+
+                            </form>
+                        </dialog>
+
+
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-xl rounded-lg ">
+                    <figure class="px-10 pt-10 ">
+                        <img src="images/fruit9.png " alt="Shoes " class="rounded-xl " />
+
+                    </figure>
+                    <hr class="w-60 mt-7 mx-auto ">
+                    <div class="card-body items-center text-center space-y-4 ">
+                        <h1>Banana</h1>
+                        <div class="rating ">
+                            <input type="radio " name="rating-2 " class="mask mask-star-2 bg-orange-400 " />
+                            <input type="radio " name="rating-2 " class="mask mask-star-2 bg-orange-400 " checked />
+                            <input type="radio " name="rating-2 " class="mask mask-star-2 bg-orange-400 " />
+                            <input type="radio " name="rating-2 " class="mask mask-star-2 bg-orange-400 " />
+                            <input type="radio " name="rating-2 " class="mask mask-star-2 bg-orange-400 " />
+                        </div>
+
+                        <!-- Open the modal using ID.showModal() method -->
+                        <button class="btn " onclick="my_modal_8.showModal() ">Deatails</button>
+                        <dialog id="my_modal_8 " class="modal modal-middle sm:modal-middle ">
+                            <form method="dialog " class="modal-box w-80 ">
+                                <h3 class="font-bold text-lg ">Hello!</h3>
+                                <p class="py-4 ">Press ESC key or click the button below to close</p>
+                                <div class="modal-action ">
+                                    <!-- if there is a button in form, it will close the modal -->
+                                    <button class="btn ">Close</button>
+                                </div>
+                            </form>
+                        </dialog>
+
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </main>
 
 </body>
 
