--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
         <!-- carousel-->
         <div class="container  mx-auto mt-4 ">
             <div class="flex  justify-center">
-                <div class="carousel m-2 lg:m-0 w-full md:w-3/4 lg:w-full h-[200px] md:h-[350px] lg:h-[450px] relative  bg-gradient-to-r from-[#121212bb] to-[#0000009b] rounded-lg">
+                <div class="carousel mx-2 md:mx-4 lg:m-0 w-full  h-[200px] md:h-[350px] lg:h-[450px] relative  bg-gradient-to-r from-[#121212c7] to-[#000000a5] rounded-lg">
 
                     <div id="slide1" class="carousel-item relative w-full mix-blend-overlay">
                         <img src="images/banner1.png" class="w-full ">
 
-                        <div class="absolute left-20 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 ">
+                        <div class="absolute left-20 top-6 md:left-40  lg:left-80 space-y-3 md:space-y-6  ">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
@@ -160,7 +160,7 @@
                     </div>
                     <div id="slide2" class="carousel-item relative w-full  mix-blend-overlay">
                         <img src="images/banner2.png" class="w-full  " alt="">
-                        <div class="absolute left-20 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
+                        <div class="absolute left-20 top-6 md:left-40  lg:left-80 space-y-3 md:space-y-6 lg:space-y-8">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
@@ -188,7 +188,7 @@
 
                     <div id="slide3" class="carousel-item relative w-full  mix-blend-overlay">
                         <img src="images/banner3.png" class="w-full  " alt="">
-                        <div class="absolute left-20 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
+                        <div class="absolute left-20 top-6 md:left-40  lg:left-80 space-y-3 md:space-y-6 lg:space-y-8">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
@@ -211,7 +211,7 @@
 
                     <div id="slide4" class="carousel-item relative w-full  mix-blend-overlay">
                         <img src="images/banner4.png" class="w-full  " alt="">
-                        <div class="absolute left-20 top-6 md:left-12  lg:left-60 space-y-3 md:space-y-6 lg:space-y-8">
+                        <div class="absolute left-20 top-6 md:left-40  lg:left-80 space-y-3 md:space-y-6 lg:space-y-8">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
