--- a/index.html
+++ b/index.html
@@ -523,8 +523,14 @@
                 </div>
 
             </div>
-
+            <div class="flex justify-center">
+                <button class="btn btn-primary">Shop all</button>
+            </div>
         </div>
+
+
+
+
     </main>
 
 
