--- a/index.html
+++ b/index.html
@@ -568,12 +568,12 @@
             </div>
         </div>
 
-        <!-- meet the team section addded -->
-        <div class="container mx-auto w-11/12 md:w-11/12 lg:w-full 
-         mt-10  px-8 md:px-20 lg:px-0 pb-20  ">
+        <!-- meet the team section  -->
+        <div class="container mx-auto  
+         mt-10  px-8 md:px-20 lg:px-0 pb-20 w-full">
 
 
-            <div class="hero bg-slider-image1 rounded-xl lgrounded-2xl">
+            <div class="hero bg-slider-image1 rounded-xl lg:rounded-2xl">
                 <div class="hero-overlay bg-opacity-50 rounded-xl  lg:rounded-2xl"></div>
                 <div class="hero-content text-center text-neutral-content ">
 
