bonus sectionsome css change

--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                         <div class=" grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 ">
                             <div class=" ">
                                 <figure class="px-6 pt-6 flex justify-center ">
-                                    <img src="images/member1.png " alt="Shoes " class="rounded-xl w-20 " />
+                                    <img src="images/member1.png " alt="Shoes " class="rounded-xl w-28 md:w-24 lg:w-20 " />
                                 </figure>
                                 <div class="card-body items-center text-center ">
                                     <h2 class="card-title ">Awlad Hossain</h2>
@@ -691,7 +691,7 @@
                             </div>
                             <div class=" ">
                                 <figure class="px-6 pt-6 flex justify-center ">
-                                    <img src="images/member2.png " alt="Shoes " class="rounded-xl w-20 " />
+                                    <img src="images/member2.png " alt="Shoes " class="rounded-xl w-28 md:w-24 lg:w-20" />
                                 </figure>
                                 <div class="card-body items-center text-center ">
                                     <h2 class="card-title ">Awlad Hossain</h2>
@@ -759,7 +759,7 @@
                             </div>
                             <div class=" ">
                                 <figure class="px-6 pt-6 flex justify-center ">
-                                    <img src="images/member3.png " alt="Shoes " class="rounded-xl w-20 " />
+                                    <img src="images/member3.png " alt="Shoes " class="rounded-xl w-28 md:w-24 lg:w-20 " />
                                 </figure>
                                 <div class="card-body items-center text-center ">
                                     <h2 class="card-title ">Awlad Hossain</h2>
@@ -825,9 +825,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class=" ">
+                            <div>
                                 <figure class="px-6 pt-6 flex justify-center ">
-                                    <img src="images/member4.png " alt="Shoes " class="rounded-xl w-20 " />
+                                    <img src="images/member4.png " alt="Shoes " class="rounded-xl w-28 md:w-24 lg:w-20 " />
                                 </figure>
                                 <div class="card-body items-center text-center ">
                                     <h2 class="card-title ">Awlad Hossain</h2>
