--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                     </div>
                                     <div class=" space-y-5  mt-2">
                                         <h1 class="text-2xl font-bold">Apples</h1>
-                                        <p class="text-sm">
+                                        <p class="text-sm text-[#12121299] ">
                                             Professional employees are there for you to pick the most amazing and fresh fruits.
                                         </p>
                                         <div class="rating rating-md rating-half">
@@ -428,7 +428,7 @@
                                     </div>
                                     <div class=" space-y-5  mt-2">
                                         <h1 class="text-2xl font-bold">Orange</h1>
-                                        <p class="text-sm">
+                                        <p class="text-sm text-[#12121299]">
                                             Professional employees are there for you to pick the most amazing and fresh fruits.
                                         </p>
                                         <div class="rating rating-md rating-half">
@@ -493,7 +493,7 @@
                                     </div>
                                     <div class=" space-y-5  mt-2">
                                         <h1 class="text-2xl font-bold">Red Dragon</h1>
-                                        <p class="text-sm">
+                                        <p class="text-sm text-[#12121299] ">
                                             Professional employees are there for you to pick the most amazing and fresh fruits.
                                         </p>
                                         <div class="rating rating-md rating-half">
@@ -559,7 +559,7 @@
                                     </div>
                                     <div class=" space-y-5  mt-2">
                                         <h1 class="font-bold text-2xl">Banana</h1>
-                                        <p class="text-sm">
+                                        <p class="text-sm text-[#12121299] ">
                                             Professional employees are there for you to pick the most amazing and fresh fruits.
                                         </p>
                                         <div class="rating rating-md rating-half">
